# drfpro

./: .env  .gitignore  pyproject.toml  requirements.txt
apps/auth/: urls.py
apps/auto_cars/: serializers.py  urls.py
apps/auto_parks/: models.py  serializers.py  urls.py  views.py
apps/auto_parks/migrations/: 0001_initial.py
apps/cars/: filters.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/cars/migrations/: 0001_initial.py  0002_carsmodel_auto_park.py  0002_remove_carsmodel_auto_park.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_usermodel_options_alter_usermodel_managers_and_more.py
cars/: serializers.py
configs/: settings.py  urls.py
configs/extra_conf/: jwt_conf.py  rest_conf.py
core/: pagination.py
core/enums/: regex_enum.py
core/permissions/: IsSuperUser.py  is_admin_or_write_only_permission.py
core/services/: upload_service.py
